Implementado delete Allocation
